# rust_tbc_parab_schwarz

./: Cargo.toml  README.md  test.py  test_rel.py
src/: lib.rs
src/finite/: differences.rs  differences_naive.rs  mod.rs  tests.rs  volumes.rs
src/utils/: linalg.rs
